tests/conformance/invalid/conector_mapping_incompleto.svp
-- conector_mapping_incompleto.svp — Debe fallar con E007

codomain K3 = { APTO, NO_APTO, INDETERMINADO };
output_semantics Klin { APTO -> "ok"; NO_APTO -> "no"; INDETERMINADO -> "u"; }

connector Phi1 {
  source_codomain: K3;
  target_position: 3;
  mapping: { APTO -> Zero; NO_APTO -> One; }
}
